--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                                 <a href="#service">Servicios</a>
                             </li>
                             <li>
-                                <a href="#portfolio">Productos</a>
+                                <a href="#portfolio">Proyectos</a>
                             </li>
                             <li>
-                                <a href="#about">Acerca</a>
+                                <a href="#about">Acerca de Nosotros</a>
                             </li>
                             <li>
                                 <a href="#price">Precios</a>
@@ -94,7 +94,7 @@
                         <h4>Profesionales del cableado</h4>
                         <p>Un sistema de cableado correctamente diseñado e instalado provee al usuario final una infraestructura con desempeño predecible.</p>
                         <!-- <a href="http://blog.cableado.net" class="button button-ps">IR AL BLOG</a> -->
-                        <a href="#contact" class="da-link button">Quiero Conocer Mas</a>
+                        <a href="#contact" class="da-link button">Quiero Conocer Más</a>
                         <div class="da-img">
                             <img src="logos/logo.png" alt="image01">
                         </div>
@@ -105,7 +105,7 @@
                         <h2>Le Ofrecemos flexibilidad</h2>
                         <h4>Invierta correctamente en su red de cómputo</h4>
                         <p>Una correcta planeación de su sistema de cableado estructurado, le brindará la certeza de una correcta inversión a largo plazo, para el mejor rendimiento de su equipamiento tanto hardware y software. Así como la flexibilidad necesaria, para futuras adecuaciones.</p>
-                        <a href="#price" class="da-link button">¿Cuanto me cuesta?</a>
+                        <a href="#price" class="da-link button">¿Cuánto me cuesta?</a>
                         <div class="da-img">
                             <img src="logos/logo.png" alt="image01">
                         </div>
@@ -156,7 +156,7 @@
                             <div class="circle-border zoom-in">
                                 <img class="img-circle" src="logos/servicios/voz.jpg" alt="Cableado de voz y datos">
                             </div>
-                            <h3>Cableado de voz y datos</h3>
+                            <h3>Cableado estructurado de voz, datos y FO</h3>
                             <!-- <p>Cableado de Voz y Datos</p>
                             <p>Redes eléctricas para datos</p> -->
                         </div>
@@ -168,7 +168,7 @@
                                 src="logos/servicios/datos.jpg" 
                                 alt="Cableado estucturado de voz, datos y FO">
                             </div>
-                            <h3>Cableado estructurado de voz, datos y FO</h3>
+                            <h3>Diseño e implementación de Sites y Data Centers</h3>
                             <!-- <p>Hola</p> -->
                         </div>
                     </div>
@@ -177,7 +177,7 @@
                             <div class="circle-border zoom-in">
                                 <img class="img-circle" src="logos/servicios/proteccion.png" alt="Sistemas de seguridad">
                             </div>
-                            <h3>Sistemas de seguridad</h3>
+                            <h3>Sistemas de seguridad y CCTV</h3>
                             <!-- <p>Hola</p> -->
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                                 src="logos/servicios/signal.png"
                                 alt="CCTV">
                             </div>
-                            <h3>CCTV</h3>
+                            <h3>Mantenimiento a redes y Pruebas de escaneo</h3>
                             <!-- <p>Hola</p> -->
                         </div>
                     </div>                    
@@ -202,7 +202,7 @@
                                 src="logos/servicios/mantenimiento.jpg" 
                                 alt="Intrusión">
                             </div>
-                            <h3>Intrusión</h3>
+                            <h3>Intrusión y Control de accesos</h3>
                         </div>
                     </div>
                     <div class="span4">
@@ -212,7 +212,7 @@
                                 src="logos/servicios/equipo.png" 
                                 alt="Control de accesos">
                             </div>
-                            <h3>Control de accesos</h3>
+                            <h3>Redes eléctricas para datos y Respaldo de energía</h3>
                         </div>
                     </div>
                 </div> <!--end row-->
@@ -224,7 +224,7 @@
             <div class="triangle"></div>
             <div class="container">
                 <div class=" title">
-                    <h1>Quieres ver nuestros trabajos?</h1>
+                    <h1>¿Quieres ver nuestros trabajos?</h1>
                     <p>Estos son algunos de los proyectos que hemos realizado con nuestros clientes</p>
                 </div>
                 <ul class="nav nav-pills">
@@ -697,7 +697,7 @@
                     </div>
                     <div class="span6">
                         <div class="highlighted-box center">
-                            <h1>No sabes que necesitas?</h1>
+                            <h1>¿No sabes que necesitas?</h1>
                             <p>Nosotros podemos ayudarte, simplemente contáctanos</p>
                             <a button href="#contact" class="button button-sp">Contáctanos</button></a>
                         </div>
