--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
             <div class="triangle"></div>
             <div class="container">
                 <div class="about-text centered">
-                    <h3>Acerca De Nostros</h3>
+                    <h3>Acerca De Nosotros</h3>
                     <p>Esta es la experiencia que podemos brindarte</p>
                 </div>
                 <h3>Experiencia</h3>
