Arreglados problemas de la página
Solo falta agregar el formulario de contacto

--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="">
+                                <a href="https://plus.google.com/118212210800698088434/about">
                                     <span class="icon-gplus-circled"></span>
                                 </a>
                             </li>
