--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
                     <div class="span4 price-column">
                         <h3>Nodo Belden UTP Cat. 5e</h3>
                         <ul class="list">
-                            <li class="price">$999.00</li>
+                            <li class="price">$1569.00</li>
                             <li><strong>Mas</strong> I.V.A</li>
                             <li>
                                 <br><strong>Incluye:</strong>
@@ -824,7 +824,7 @@
                                 <br>Jack
                                 <br>Caja
                                 <br>Face Plate
-                                <br>Path Cord 2Ft
+                                <br>Path Cord 4 Ft
                             </li>
                             <li>Precio Sujeto a Existencias</li>
                         </ul>
@@ -833,7 +833,7 @@
                     <div class="span4 price-column">
                         <h3>Nodo Belden UTP Cat. 6e</h3>
                         <ul class="list">
-                            <li class="price">$1398.00</li>
+                            <li class="price">$2579.00</li>
                             <li><strong>Mas</strong> I.V.A</li>
                             <li>
                                 <br><strong>Incluye:</strong>
@@ -842,27 +842,26 @@
                                 <br>Jack
                                 <br>Caja
                                 <br>Face Plate
-                                <br>Path Cord
+                                <br>Path Cord 5 Ft
                             </li>
                             <li>Precio Sujeto a Existencias</li>
                         </ul>
                         <a href="#contact" class="button button-ps">COMPRAR</a>
                     </div>
                     <div class="span4 price-column">
-                        <h3>Promociones PYMES</h3>
+                        <h4>Promociones PYMES 20 Nodos Belden UTP Cat. 5e</h4>
                         <ul class="list">
-                            <li class="price">Consultar</li>
-                            <li><strong>Mas</strong> I.V.A</li>
+                            <li class="price">$35,919.00</li>
+                            <li><strong>I.V.A. Incluido</strong></li>
                             <li>
                                 <strong>Incluye:</strong>
                                 <br>
                                 <br>Jack
                                 <br>Caja
                                 <br>Face Plate
-                                <br>Path Cord 2 Ft
-                                <br>Rack 4Ft
+                                <br>Path Cord 4 Ft
+                                <br>Rack 7 Ft
                                 <br>Panel de parcheo 24 pts
-                                <br>Organizador horizontal
                             </li>
                             <li>Precios sujetos a existencias</li>
                         </ul>
@@ -886,8 +885,6 @@
                         </div> -->
                     </div>
                 </div>
-                <div id="success-subscribe" class="alert alert-success invisible">
-                    <strong>Muy bien!</strong>Se ha suscrito a nuestro newsletter.</div>
                 <div class="row-fluid">
                     <div class="span12">
                         <center>
@@ -930,12 +927,9 @@
                 <div class="map-wrapper">
                     <div class="map-canvas" id="map-canvas">Loading map...</div>
                     <div class="container">
-                        <div class="row-fluid">
+                        <!-- <div class="row-fluid">
                             <div class="span5 contact-form centered">
                                 <h3>Contáctanos</h3>
-                                <div id="successSend" class="alert alert-success invisible">
-                                    <strong>Muy Bien!</strong>Su mensaje ha sido enviado.</div>
-                                <div id="errorSend" class="alert alert-error invisible">Hubo un error.</div>
                                 <form id="contact-form" action="php/mail.php">
                                     <div class="control-group">
                                         <div class="controls">
@@ -969,7 +963,7 @@
                                     </div>
                                 </form>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="container">
