--- a/index.html
+++ b/index.html
@@ -815,8 +815,8 @@
                     <div class="span4 price-column">
                         <h3>Nodo Belden UTP Cat. 5e</h3>
                         <ul class="list">
-                            <li class="price">$1569.00</li>
-                            <li><strong>Mas</strong> I.V.A</li>
+                            <li class="price">$1,569.00</li>
+                            <li><strong>I.V.A. Incluido</strong></li>
                             <li>
                                 <br><strong>Incluye:</strong>
                                 <br>
@@ -831,10 +831,10 @@
                         <a href="#contact" class="button button-ps">COMPRAR</a>
                     </div>
                     <div class="span4 price-column">
-                        <h3>Nodo Belden UTP Cat. 6e</h3>
+                        <h3>Nodo Panduit UTP Cat. 6e</h3>
                         <ul class="list">
-                            <li class="price">$2579.00</li>
-                            <li><strong>Mas</strong> I.V.A</li>
+                            <li class="price">$2,579.00</li>
+                            <li><strong>I.V.A Incluido</strong></li>
                             <li>
                                 <br><strong>Incluye:</strong>
                                 <br>
