--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <meta name="Revisit-after" content="60 days">
         <meta name="robots" content="all">
 
+        <meta property="og:title" content="Título de la página" />
+        <meta property="og:description" content="Descripción de la página" />
+        <meta property="og:image" content="http://miweb.dominio/imagen_para_facebook.jpg" />      
+        <meta property="og:url" content="http://miweb.dominio" />
+
         <!-- ESTILOS -->
 
         <!-- Fuente Roboto -->
@@ -461,7 +466,7 @@
                     <!-- DETALLES EXITO 10 -->
                     <div id="slidingDiv10" class="toggleDiv row-fluid single-project">
                         <div class="span10">
-                            <img src="exito/10.jpg" alt="Exito1" />
+                            <img src="exito/10.JPG" alt="Exito1" />
                         </div>
                         <div class="span6">
                             <div class="project-description">
